Adding text, as requirement in task 1

--- a/frontend/task1.html
+++ b/frontend/task1.html
@@ -11,6 +11,7 @@
   <script src="/static/three.js-dev/examples/js/loaders/LoaderSupport.js" defer></script>
   <script src="/static/three.js-dev/examples/js/controls/OrbitControls.js" defer></script>
   <script src="/static/three.js-dev/examples/js/loaders/OBJLoader2.js" defer></script>
+  <script src="/static/three.js-dev/examples/js/utils/GeometryUtils.js" defer></script>
   <script src="/static/task1/handler.js" defer></script>
   <script src="/static/task1/scripts_change.js" defer></script>
 </head>
